# MyRust

./: .gitignore  Cargo.toml  README.md
iop-workspace/: Cargo.toml
iop-workspace/ws_lib/: Cargo.toml
iop-workspace/ws_lib/src/: lib.rs
iop-workspace/ws_lib/tests/: test.rs
iop-workspace/ws_one/: Cargo.toml
src/: 01_rust_mut_pointer_borrow.rs  main.rs
